--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="eng" onclick="jump()">
 <head>
     <meta charset="UTF-8">
     <title>Giochino</title>
@@ -7,14 +7,9 @@
 </head>
 <body>
     <div id="game">
-        <div id="character">
-
-        </div>
-        <div id="block">
-
-        </div>
+        <div id="character"></div>
+        <div id="block"></div>
     </div>
-
 </body>
 <script src="script.js"></script>
 </html>
